[package]
name = "sycamore-query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore-query-hydrate-proc = { version = "0.1.0", path = "sycamore-query-hydrate-proc" }
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
js-sys = "0.3.60"
sycamore = "0.8.2"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
web-sys = { version = "0.3.60", features = ["Event", "Navigator", "Window"] }
sycamore-query-hydrate-derive = { version = "0.1.0", path = "sycamore-query-hydrate-derive" }
