[package]
name = "sycamore-query"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/0xfMel/sycamore-query"
description = "query handling for sycamore"
keywords = ["fetch", "sycamore", "query", "perseus"]
categories = ["web-programming", "wasm"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
js-sys = "0.3.60"
sycamore = { version = "0.8.2", features = ["suspense"] }
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
web-sys = { version = "0.3.60", features = ["Event", "Navigator", "Window"] }
sycamore-query-hydrate-derive = { version = "0.1.0", path = "sycamore-query-hydrate-derive" }

[dev-dependencies]
tokio = { version = "1.22.0", features = ["rt", "macros"] }
