[package]
name = "rust-query-hydrate-derive"
version = "0.0.0-alpha-1"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/0xfMel/rust-query"
description = "Derive macro for hydrate feature of rust-query"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
once_cell = { version = "1.16.0", features = ["parking_lot"] }
parking_lot = "0.12.1"
proc-macro-crate = "1.2.1"
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = { version = "1.0.103", features = ["full", "extra-traits"] }
